# github-profiles-automator

./: CODEOWNERS  CONTRIBUTING.md  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements-unit.txt  requirements.txt  spread.yaml  tox.ini  try.yaml
.github/workflows/: ci.yaml  integrate.yaml  publish.yaml  tiobe_scan.yaml  tiobe_scan.yml
src/: charm.py  wrapper-script.sh
src/components/: git-sync-exechook.sh  pebble_component.py  pmr_component.py
src/profiles_management/: README.md  __init__.py  create.py  create_or_update.py  delete_stale.py  get_stale.py  list_stale.py
src/profiles_management/helpers/: k8s.py  kfam.py  profiles.py
src/profiles_management/k8s/: generic.py  kfam.py  profiles.py
src/profiles_management/pmr/: __init__.py  classes.py  schema.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/integration/: charms_dependencies.py  test_charm.py  test_charm_ambient.py
tests/integration/profiles_management/: conftest.py  helpers.py  test_create_or_update_profiles.py  test_delete_stale_profiles.py  test_list_stale_profiles.py  test_stale_profiles.py  test_update_resource_quota.py
tests/integration/profiles_management/helpers/: k8s.py  kfam.py  profiles.py
tests/integration/profiles_management/utils/: k8s.py  kfam.py  profiles.py
tests/integration/profiles_management/yamls/: contributor.yaml  profile-resource-quota.yaml  profile.yaml
tests/samples/: pmr-sample-single.yaml
tests/unit/: helpers.py  test_charm.py
tests/unit/profiles-management/helpers/: test_k8s.py  test_kfam.py
tests/unit/profiles-management/pmr/: test_classes.py
tests/unit/profiles-management/pmr/data/: pmr-invalid-no-contributors.yaml  pmr-invalid-no-owner.yaml  pmr-invalid-resourcequota-2.yaml  pmr-invalid-resourcequota-3.yaml  pmr-invalid-wrong-role.yaml  pmr-resourcequota.yaml  pmr-simple.yaml
