# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
lint.ignore = ["E501", "D107"]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src"]

[tool.poetry]
name = "github-profiles-automator"
version = "0.1.0"
description = "A charm dedicated to updating Kubeflow Profiles based on a Profiles Management Representation file, that lives in a GitHub repo."
authors = [
  "Canonical Analytics Team"
]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ops = ">=2.17.0"
jsonschema = "^4.23.0"
lightkube = "^0.15.5"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit-library.dependencies]
coverage = { extras = ["toml"], version = ">7.0" }
pytest = "^8.3.3"
pytest-operator = ">0.30"
jsonschema = "^4.23.0"
lightkube = "^0.15.5"

[tool.poetry.group.unit.dependencies]
coverage = { extras = ["toml"], version = ">7.0" }
pytest = "^8.3.3"
pytest-operator = ">0.30"
jsonschema = "^4.23.0"
lightkube = "^0.15.5"

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
tenacity = "^9.0.0"
requests = "^2.32.3"
pytest = "^8.3.3"
pytest-operator = ">0.30"
lightkube = "^0.15.5"
jsonschema = "^4.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
